--- a/cdmlib-remote-webapp/pom.xml
+++ b/cdmlib-remote-webapp/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>cdmlib-parent</artifactId>
@@ -29,7 +30,7 @@
     </url>
   </scm>
 
-    <profiles>
+  <profiles>
     <profile>
       <id>local-repository</id>
       <activation>
@@ -60,10 +61,10 @@
       <artifactId>cdmlib-remote</artifactId>
     </dependency>
     <dependency>
-      <!-- TODO this is also offered by cdmlib-remote, can it be removed?
+      <!-- TODO this is also offered by cdmlib-remote, can it be removed? 
         What does provided mean? -->
       <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
+      <artifactId>javax.servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
 
@@ -128,47 +129,6 @@
     </dependency>
 
     <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>vaadin-server</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>vaadin-shared</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>vaadin-client-compiled</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>vaadin-client</artifactId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>vaadin-themes</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>vaadin-client-compiler</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>ru.xpoft.vaadin</groupId>
-      <artifactId>spring-vaadin-integration</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.vaadin.addons</groupId>
-      <artifactId>exporter</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.vaadin.addons</groupId>
-      <artifactId>wizards-for-vaadin</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
@@ -182,7 +142,7 @@
   </dependencies>
 
   <build>
-   <resources>
+    <resources>
       <!-- ${basedir}/src/test/resources -->
       <resource>
         <!-- replace the place holders like ${...} in datasources.xml -->
@@ -190,53 +150,35 @@
         <filtering>true</filtering>
         <directory>${basedir}/src/test/resources</directory>
         <includes>
-            <include>datasources.xml</include>
+          <include>datasources.xml</include>
         </includes>
       </resource>
       <resource>
-       <!-- all other test resources without filtering -->
+        <!-- all other test resources without filtering -->
         <targetPath>${project.build.directory}/test-classes</targetPath>
         <directory>${basedir}/src/test/resources</directory>
         <excludes>
-            <exclude>datasources.xml</exclude>
+          <exclude>datasources.xml</exclude>
         </excludes>
       </resource>
       <resource>
-       <!-- all main resources without filtering -->
+        <!-- all main resources without filtering -->
         <targetPath>${project.build.directory}/classes</targetPath>
         <directory>${basedir}/src/main/resources</directory>
       </resource>
-     </resources>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>2.3</version>
-      </plugin>
-      <plugin>
-        <groupId>com.vaadin</groupId>
-        <artifactId>vaadin-maven-plugin</artifactId>
-        <version>7.1.11</version>
-        <executions>
-          <execution>
-            <configuration>
-              <!--
-                if you don't specify any modules, the plugin will find them
-              -->
-              <modules>
-                <module>${cdm-remote}.vaadin.redlist.widgetset</module>
-              </modules>
-            </configuration>
-            <goals>
-              <goal>update-widgetset</goal>
-            </goals>
-          </execution>
-        </executions>
         <configuration>
-          <strict>true</strict>
-          <force>true</force>
-          <webappDirectory>src/main/webapp/VAADIN/widgetsets</webappDirectory>
-          <module>eu.etaxonomy.cdm.remote.vaadin.redlist.wigetset.AppWidgetSet</module>
+          <webResources>
+            <resource>
+              <!-- this is relative to the pom.xml directory -->
+              <directory>${project.build.directory}/cdm-vaadin</directory>
+            </resource>
+          </webResources>
         </configuration>
       </plugin>
       <plugin>
@@ -260,24 +202,23 @@
         <artifactId>jetty-maven-plugin</artifactId>
         <version>9.1.3.v20140225</version>
         <configuration>
-            <stopKey>stop</stopKey>
-            <stopPort>9199</stopPort>
-            <scanIntervalSeconds>10</scanIntervalSeconds>
-            <jettyXml>${basedir}/src/test/resources/etc/jetty/jetty.xml,${basedir}/src/test/resources/etc/jetty/jetty-http.xml</jettyXml>
-            <!--
-                <jettyXml>./src/test/resources/etc/jetty/jetty.xml,./src/test/resources/etc/jetty/jetty-http.xml,./src/test/resources/etc/jetty/jetty-ssl.xml,./src/test/resources/etc/jetty/jetty-https.xml</jettyXml>
-             -->
-            <systemProperties>
-              <systemProperty>
-                <name>cdm.datasource</name>
-                <value>h2_cdmTest</value>
-              </systemProperty>
-              <systemProperty>
-                <!-- datasources.xml is prepared by <plugins><resources>..</resources> above -->
-                <name>cdm.beanDefinitionFile</name>
-                <value>${project.build.directory}/test-classes/datasources.xml</value>
-              </systemProperty>
-            </systemProperties>
+          <stopKey>stop</stopKey>
+          <stopPort>9199</stopPort>
+          <scanIntervalSeconds>10</scanIntervalSeconds>
+          <jettyXml>${basedir}/src/test/resources/etc/jetty/jetty.xml,${basedir}/src/test/resources/etc/jetty/jetty-http.xml</jettyXml>
+          <!-- <jettyXml>./src/test/resources/etc/jetty/jetty.xml,./src/test/resources/etc/jetty/jetty-http.xml,./src/test/resources/etc/jetty/jetty-ssl.xml,./src/test/resources/etc/jetty/jetty-https.xml</jettyXml> -->
+          <systemProperties>
+            <systemProperty>
+              <name>cdm.datasource</name>
+              <value>h2_cdmTest</value>
+            </systemProperty>
+            <systemProperty>
+              <!-- datasources.xml is prepared by <plugins><resources>..</resources> 
+                above -->
+              <name>cdm.beanDefinitionFile</name>
+              <value>${project.build.directory}/test-classes/datasources.xml</value>
+            </systemProperty>
+          </systemProperties>
         </configuration>
         <executions>
           <execution>
@@ -297,6 +238,40 @@
             <goals>
               <goal>stop</goal>
             </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.9</version>
+        <executions>
+          <execution>
+            <id>unpack</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>unpack</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>eu.etaxonomy</groupId>
+                  <artifactId>cdm-vaadin</artifactId>
+                  <version> ${project.version}</version>
+                  <type>war</type>
+                  <overWrite>true</overWrite>
+                  <outputDirectory>${project.build.directory}/cdm-vaadin</outputDirectory>
+                  <!-- <destFileName>optional-new-name.jar</destFileName> -->
+                  <!-- <includes>**/*.class,**/*.xml</includes> -->
+                  <excludes>META-INF/**</excludes>
+                </artifactItem>
+              </artifactItems>
+              <!-- <includes>**/*.java</includes> -->
+              <!-- <excludes>**/*.properties</excludes> -->
+              <!-- <outputDirectory>${project.build.directory}/wars</outputDirectory> -->
+              <overWriteReleases>false</overWriteReleases>
+              <overWriteSnapshots>true</overWriteSnapshots>
+            </configuration>
           </execution>
         </executions>
       </plugin>
