activating the swagger rest service documentation by reverting the revertion of the premature committed experimental branch (swagger) svn: r21387, git: be528c1edf

--- a/cdmlib-remote-webapp/pom.xml
+++ b/cdmlib-remote-webapp/pom.xml
@@ -16,6 +16,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jackson.version>2.2.3</jackson.version>
   </properties>
 
   <scm>
@@ -127,8 +128,30 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-c3p0</artifactId>
     </dependency>
-
+    <!-- swagger -->
     <dependency>
+      <groupId>com.mangofactory</groupId>
+      <artifactId>swagger-springmvc</artifactId>
+      <version>0.8.5</version>
+    </dependency>
+    <!-- dependencies for swagger-springmvc, added explicitely -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    <!-- testing -->
+	<dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
@@ -138,7 +161,6 @@
       <artifactId>yjp-controller-api-redist</artifactId>
       <scope>test</scope>
     </dependency>
-
   </dependencies>
 
   <build>
