--- a/cdmlib-remote/pom.xml
+++ b/cdmlib-remote/pom.xml
@@ -12,7 +12,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>cdmlib-remote</artifactId>
   <properties>
-    <!-- custom property to hold the patch version number shouldn't this 
+    <!-- custom property to hold the patch version number shouldn't this
       be set in the parent pom? -->
     <project.patchversion>0</project.patchversion>
   </properties>
@@ -273,7 +273,11 @@
       <artifactId>xom</artifactId>
     </dependency>
 
-
+    <!-- swagger -->
+    <dependency>
+        <groupId>com.wordnik</groupId>
+        <artifactId>swagger-annotations</artifactId>
+    </dependency>
 
     <!-- Connection Pooling -->
     <dependency>
