--- a/cdmlib-remote-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/cdmlib-remote-webapp/src/main/webapp/WEB-INF/web.xml
@@ -49,10 +49,8 @@
       <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <!--
-      Security
-    -->
-    <!--
+    <!-- Remoting Security -->
+   
       <filter>
          <filter-name>springSecurityFilterChain</filter-name>
          <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -61,5 +59,5 @@
        <filter-name>springSecurityFilterChain</filter-name>
        <url-pattern>/*</url-pattern>
      </filter-mapping>
-    -->
+
 </web-app>
