--- a/cdmlib-model/src/main/resources/ValidationMessages.properties
+++ b/cdmlib-model/src/main/resources/ValidationMessages.properties
@@ -27,3 +27,4 @@ eu.etaxonomy.cdm.validation.annotation.ChildTaxaMustNotSkipRanks.message=must no
 eu.etaxonomy.cdm.validation.annotation.NoRecursiveInReference.message=a reference must not have itself as an in-Reference
 eu.etaxonomy.cdm.validation.annotation.InReference.ReferenceShouldNotHaveIsbn.message=the reference should not have an isbn
 eu.etaxonomy.cdm.validation.annotation.InReference.JournalShouldNotHaveDatePublished.message=a journal must not have a date published
+eu.etaxonomy.cdm.validation.annotation.ValidTaxonomicYear.message=a valid taxon name year must be after 1753
