--- a/cdmlib-model/src/main/resources/ValidationMessages.properties
+++ b/cdmlib-model/src/main/resources/ValidationMessages.properties
@@ -28,3 +28,4 @@ eu.etaxonomy.cdm.validation.annotation.NoRecursiveInReference.message=a referenc
 eu.etaxonomy.cdm.validation.annotation.InReference.ReferenceShouldNotHaveIsbn.message=the reference should not have an isbn
 eu.etaxonomy.cdm.validation.annotation.InReference.JournalShouldNotHaveDatePublished.message=a journal must not have a date published
 eu.etaxonomy.cdm.validation.annotation.ValidTaxonomicYear.message=a valid taxon name year must be after 1753
+eu.etaxonomy.cdm.validation.annotation.name.ValidTypeDesignation.message = Type designations must belong to a name and must either link to a specimen/name or be flagged as 'not designated'
