decoupling version of cdm-vaadin, to solve problems in the maven release:prepare phase

--- a/cdmlib-remote-webapp/pom.xml
+++ b/cdmlib-remote-webapp/pom.xml
@@ -276,7 +276,7 @@
                 <artifactItem>
                   <groupId>eu.etaxonomy</groupId>
                   <artifactId>cdm-vaadin</artifactId>
-                  <version> ${project.version}</version>
+                  <version>${cdm-vaadin.version}</version>
                   <type>war</type>
                   <overWrite>true</overWrite>
                   <outputDirectory>${project.build.directory}/cdm-vaadin</outputDirectory>
