--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,17 @@
     <poi.version>3.10-FINAL</poi.version>
     <jackson.version>2.2.3</jackson.version>
   </properties>
+  
   <scm>
     <connection>scm:svn:http://dev.e-taxonomy.eu/svn/trunk/cdmlib/</connection>
     <developerConnection>scm:svn:http://dev.e-taxonomy.eu/svn/trunk/cdmlib/</developerConnection>
     <url>http://dev.e-taxonomy.eu/trac/browser/trunk/cdmlib</url>
   </scm>
+  
+  <prerequisites>
+    <maven>3.0.5</maven>
+  </prerequisites>
+  
   <mailingLists>
     <mailingList>
       <name>dev-edit</name>
@@ -534,6 +540,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>2.8</version>
         <configuration>
           <!-- when the dependencyLocations option is enabled maven will 
             determine if resources are located within a given repository. If that repository 
